--- a/.config/polybar/arrows.ini
+++ b/.config/polybar/arrows.ini
@@ -12,7 +12,13 @@
 
 [arrow]
 aleft  = "%{T13}%{T-}"
-aright = "%{T13}%{T-}"
+aright = "%{T13} %{T-}%{O-10}"
+
+[module/R1]
+type = custom/text
+content = ${arrow.aright}
+content-foreground  = ${colors.blue}
+content-suffix-margin = 1
 
 [module/sr1]
 type = custom/text
@@ -35,39 +41,90 @@ content-background  = ${colors.bcolor2}
 [module/sr4]
 type = custom/text
 content = ${arrow.aright}
-content-foreground  = ${colors.bcolor4}
-content-background  = ${colors.bcolor3}
+content-foreground  = ${colors.background}
+content-background  = ${colors.blue1}
 
 ;; left separators
+[module/L1]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue}
 
 [module/sl1]
 type = custom/text
 content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor1}
+content-foreground  = ${colors.bcolor2}
+content-background  = ${colors.blue3}
 
 [module/sl2]
-type = custom/text
-content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor2}
-content-background  = ${colors.bcolor1}
-
-[module/sl3]
 type = custom/text
 content = ${arrow.aleft}
 content-foreground  = ${colors.bcolor3}
 content-background  = ${colors.bcolor2}
 
-[module/sl4]
+[module/sl3]
 type = custom/text
 content = ${arrow.aleft}
 content-foreground  = ${colors.bcolor4}
 content-background  = ${colors.bcolor3}
 
-[module/sl5]
+[module/sl4]
 type = custom/text
 content = ${arrow.aleft}
-content-foreground  = ${colors.bcolor5}
+content-foreground  = ${colors.background}
 content-background  = ${colors.bcolor4}
+
+[module/lblue1]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue1}
+
+[module/lblue2]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue2}
+content-background  = ${colors.blue1}
+
+[module/lblue3]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue3}
+content-background  = ${colors.blue2}
+
+[module/lblue4]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue4}
+
+[module/lblue5]
+type = custom/text
+content = ${arrow.aleft}
+content-foreground  = ${colors.blue5}
+
+[module/spacing1]
+type = custom/text
+content = " "
+content-background  = ${colors.blue1}
+
+[module/spacing2]
+type = custom/text
+content = " "
+content-background  = ${colors.blue2}
+
+[module/spacing3]
+type = custom/text
+content = " "
+content-background  = ${colors.blue3}
+
+[module/spacing4]
+type = custom/text
+content = " "
+content-background  = ${colors.blue4}
+
+[module/spacing5]
+type = custom/text
+content = " "
+content-background  = ${colors.blue5}
 
 [module/sl6]
 type = custom/text
@@ -75,3 +132,31 @@ content = ${arrow.aleft}
 content-foreground  = ${colors.bcolor6}
 content-background  = ${colors.bcolor5}
 
+[module/BLD]
+type = custom/text
+content = "%{T15}%{T-}"
+content-font = 15
+content-background = ${colors.background}
+content-foreground = ${colors.blue}
+
+[module/BRD]
+type = custom/text
+content = "%{T15}%{T-}"
+content-font = 15
+content-background = ${colors.background}
+content-foreground = ${colors.blue}
+
+[module/spacing]
+type = custom/text
+content = " "
+content-background = ${colors.background}
+
+[module/sep]
+type = custom/text
+;content = 
+content = ""
+
+content-font = 15
+content-background = ${colors.background}
+content-foreground = ${colors.altblack}
+content-padding = 1
