--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -4,12 +4,13 @@ bg-alt = #2a2f3b
 fg = #ECEFF4
 fg-alt = #E5E9F0
 
-blue = #81A1C1
+blue = #7F9DDA
 cyan = #88C0D0
 green = #A3BE8C
 orange = #D08770
 purple = #B48EAD
 red = #BF616A
+magenta = #ad8ee6
 yellow = #EBCB8B
 
 black = #000
@@ -18,9 +19,10 @@ white = #FFF
 trans = #00000000
 semi-trans-black = #aa000000
 
-background     = #161924
+; background =  #EBCB8B
+background = #1a1b26
 background-alt = #bf616a
-foreground     = #ADADAD
+foreground = #a9b1d6
 alert          = #bf616a
 
 color1          = #b48ead
@@ -39,3 +41,19 @@ bcolor3         = #262a3c
 bcolor4         = #1c242f 
 bcolor5         = #0c141c
 bcolor6         = #1c242f 
+
+altblack = #444b6a
+altred = #ff7a93
+altgreen = #b9f27c
+altyellow = #ff9e64
+altblue = #7da6ff
+altmagenta = #bb9af7
+altcyan = #0db9d7
+altwhite = #acb0d0
+
+; blue1 = #41719B
+blue1 = #7aa2f7
+blue2 = #4E83C9
+blue3 = #22639B
+blue4 = #2871cc
+blue5 = #003f9a
