--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -6,11 +6,10 @@ include-file = $HOME/.config/polybar/arrows.ini
 
 [bar/main]
 width = 99.2%
-height = 31
-line-size = 3
+height = 30
+line-size = 2
 offset-x = 0.5%
 offset-y = 0.8%
-radius = 9
 top = true
 fixed-center = true
 
@@ -28,21 +27,21 @@ foreground = ${colors.fg}
 ; line-size = 4
 border-size = 2
 border-top-size = 2
-border-bottom-size = 4
+border-bottom-size = 2
 border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
 ; modules-left = memory margin cpu margin temperature 
-modules-left = menu bspwm round-right
+modules-left = L1 menu R1 sep bspwm sep spacing spacing spacing spacing spacing sep title
 modules-center = temperature cpu memory
-modules-right = sl1 pulseaudio sl2 battery sl3 date sl4 eth wlan 
+modules-right = lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
 tray-background = ${colors.bg}
 tray-position = left
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = 260
+tray-offset-x = 420
 
 cursor-click = pointer
 cursor-scroll = ns-resize
