--- a/.config/polybar/fonts.ini
+++ b/.config/polybar/fonts.ini
@@ -14,3 +14,6 @@ font-10 = "Material Icons Sharp:size=13;4"
 font-11 = "Material Icons TwoTone:size=13;4"
 
 font-12 = "Iosevka Nerd Font:style=Medium:size=21;4"
+font-13 = "Iosevka Nerd Font:size=12;3"
+font-14 = "Iosevka Nerd Font:size=17;4"
+font-15 = "Iosevka Nerd Font:size=18;4"
