--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -1,67 +1,54 @@
 [module/bspwm]
-; type = internal/bspwm
-;
-; format = <label-state>
-; format-background = ${colors.bg-alt}
-;
-; label-focused = %{T10}%{T-}
-; label-focused-foreground = ${colors.green}
-; label-focused-padding = 1
-;
-; label-occupied = %{T10}%{T-}
-; label-occupied-foreground = ${colors.orange}
-; label-occupied-padding = 1
-;
-; label-urgent = %{T10}%{T-}
-; label-urgent-foreground = ${colors.red}
-; label-urgent-padding = 1
-;
-; label-empty = %{T10}%{T-}
-; label-empty-foreground = ${colors.blue}
-; label-empty-padding = 1
-;
-; label-locked = %{T9}%{T-}
-; label-locked-foreground = ${colors.yellow}
-; label-locked-padding = 1
-; label-sticky = %{T9}%{T-}
-; label-sticky-foreground = ${colors.yellow}
-; label-sticky-padding = 1
-; label-private = %{T9}%{T-}
-; label-private-foreground = ${colors.red}
-; label-private-padding = 1
-; label-marked = %{T9}%{T-}
-; label-marked-foreground = ${colors.green}
-; label-marked-padding = 1
-
 type = internal/bspwm
 
-pin-workspaces=true
+pin-workspaces = true
+inline-mode = false
 
-ws-icon-0 = 1;%{F#caffbf}%{T7}%{T-}%{F-}
-ws-icon-1 = 2;%{F#bf616a}%{T3} %{T-}%{F-}
-ws-icon-2 = 3;%{F#a3be8c}%{T7}%{T-}%{F-}
-ws-icon-3 = 4;%{F#9bf6ff}%{T7}%{T-}%{F-}
-ws-icon-4 = 5;%{F#ebcb8b}%{T7}%{T-}%{F-}
-ws-icon-default = 
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
 
-format = <label-state><label-mode>
+fuzzy-match = true
+ws-icon-0=1; 
+ws-icon-1=2; 
+ws-icon-2=3; 
+ws-icon-3=4;
+ws-icon-4=5;
+ws-icon-5=6;
+ws-icon-6=7;漣
+ws-icon-default = 
 
-label-focused            = %icon%
-label-focused-foreground = ${colors.foreground}
-label-focused-background = ${colors.bcolor2}
-label-focused-underline  = ${colors.background-alt}
-label-focused-padding    = 1.5
+format = <label-state>
+format-font = 14
 
-label-occupied            = ${self.label-focused}
-label-occupied-background = ${self.label-focused-background}
-label-occupied-padding    = ${self.label-focused-padding}
+label-monitor = %icon%
 
-label-urgent            = ${self.label-focused}
-label-urgent-foreground = ${colors.alert}
-label-urgent-background = ${self.label-focused-background}
-label-urgent-padding    = ${self.label-focused-padding}
+label-focused = %icon%
+label-focused-foreground = ${colors.orange}
+label-focused-background = ${colors.background}
+label-focused-underline =  ${colors.blue}
+label-focused-padding-right = 2
+label-focused-padding-left = 1
 
-label-empty            = ${self.label-focused}
+label-occupied = %icon%
+label-occupied-foreground = ${colors.yellow}
+label-occupied-background = ${colors.background}
+;label-occupied-underline = 
+label-occupied-padding-right = 2
+label-occupied-padding-left = 1
+
+label-urgent = %icon%
+label-urgent-foreground = ${colors.red}
+label-urgent-background = ${colors.background}
+label-urgent-underline =  ${colors.red}
+label-urgent-padding-right = 2
+label-urgent-padding-left = 1
+
+label-empty = %icon%
 label-empty-foreground = ${colors.foreground}
-label-empty-background = ${self.label-focused-background}
-label-empty-padding    = ${self.label-focused-padding}
+label-empty-padding-right = 2
+label-empty-padding-left = 1
+
+; Separator in between workspaces
+label-separator = " "
+label-separator-foreground = ${colors.altblack} 
