--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -20,4 +20,5 @@ format-prefix            = 
 format-padding    = 3
 format-prefix-foreground = ${colors.color2}
 label                    = %percentage:2%%
+label-foreground = ${colors.foreground}
 label-padding            = 1
