--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -4,11 +4,12 @@ interval = 1
 
 format                = <label>
 format-foreground     = ${colors.foreground}
-format-background     = ${colors.bcolor3}
+format-background     = ${colors.background}
 format-prefix         =  
-format-prefix-foreground = ${colors.color7}
+format-prefix-foreground = ${colors.magenta}
 format-prefix-padding = 1
 label                 = %time%
+label-foreground = ${colors.foreground}
 label-padding         = 1
-time                  = %I:%M %p
+time                  = %H:%M
 time-alt              = %A, %d %B %Y
