--- a/.config/polybar/modules/eth.ini
+++ b/.config/polybar/modules/eth.ini
@@ -11,4 +11,5 @@ format-connected-prefix            = 
 format-connected-prefix-foreground = ${colors.color9}
 format-connected-prefix-padding    = 1
 label-connected                    = %local_ip%
+label-connected-foreground = ${colors.foreground}
 label-connected-padding            = 1
