--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -19,4 +19,5 @@ format-prefix            = 
 format-padding = 1
 format-prefix-foreground = ${colors.color3}
 label                    = %mb_used%
+label-foreground = ${colors.foreground}
 label-padding            = 1
