--- a/.config/polybar/modules/menu.ini
+++ b/.config/polybar/modules/menu.ini
@@ -1,8 +1,8 @@
 [module/menu]
-type               = custom/text
-content            = %{T3} %{T-}
-content-padding    = 2
-content-foreground = ${colors.blue}
-content-background = ${colors.bcolor3}
-click-left         = rofi -show run -theme day-city
-click-right        = rofi -show window -theme day-city
+type = custom/text
+content = %{O5} %{O1}  
+content-font = 16
+content-foreground = ${colors.background}
+content-background = ${colors.blue} 
+content-padding = 1.5
+click-left = def-dmenu
