--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -5,14 +5,16 @@ use-ui-max = false
 
 format-volume            = <ramp-volume><label-volume>
 format-volume-foreground = ${colors.foreground}
-format-volume-background = ${colors.bcolor1}
+format-volume-background = ${colors.bcolor2}
 label-volume             = %percentage%%
+label-volume-foreground = ${colors.foreground}
 label-volume-padding     = 1
 
 format-muted-foreground     = ${colors.alert}
 format-muted-background     = ${self.format-volume-background}
 format-muted-prefix         = 
 format-muted-prefix-padding = 1
+label-muted-foreground = ${colors.foreground}
 label-muted                 = Muted
 label-muted-padding         = ${self.label-volume-padding}
 
