--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -16,7 +16,7 @@ format-warn-prefix-padding = 1
 format-warn-padding = 1
 
 label = %{T2}%temperature-c%%{T-}
-label-foreground = ${colors.fg}
+label-foreground = ${colors.foreground}
 
 label-warn = %{T2}%temperature-c%%{T-}
-label-warn-foreground = ${colors.fg}
+label-warn-foreground = ${colors.foreground}
