--- a/.config/polybar/modules/wlan.ini
+++ b/.config/polybar/modules/wlan.ini
@@ -12,6 +12,7 @@ format-connected-prefix            = 
 format-connected-prefix-foreground = ${colors.color8}
 format-connected-prefix-padding    = 1
 label-connected                    = %essid%
+label-connected-foreground = ${colors.foreground}
 label-connected-padding            = 1
 
 format-disconnected                = <label-disconnected>
