--- a/.config/cava/config
+++ b/.config/cava/config
@@ -133,7 +133,7 @@
 # if supported, ncurses mode will be forced on if user defined colors are used.
 # default is to keep current terminal color
 ; background = default
-; foreground = default
+foreground = '#7aa2f7'
 
 # SDL only support hex code colors, these are the default:
 ; background = '#111111'
@@ -143,11 +143,11 @@
 # Gradient mode, only hex defined colors (and thereby ncurses mode) are supported,
 # background must also be defined in hex  or remain commented out. 1 = on, 0 = off.
 # You can define as many as 8 different colors. They range from bottom to top of screen
-; gradient = 0
-; gradient_count = 8
-; gradient_color_1 = '#59cc33'
-; gradient_color_2 = '#80cc33'
-; gradient_color_3 = '#a6cc33'
+gradient = 1
+gradient_count = 2
+gradient_color_1 = '#7aa2f7'
+gradient_color_2 = '#FFFFFF'
+; gradient_color_3 = '#FFFFFF'
 ; gradient_color_4 = '#cccc33'
 ; gradient_color_5 = '#cca633'
 ; gradient_color_6 = '#cc8033'
@@ -161,7 +161,7 @@
 # Percentage value for integral smoothing. Takes values from 0 - 100.
 # Higher values means smoother, but less precise. 0 to disable.
 # DEPRECATED as of 0.8.0, use noise_reduction instead
-; integral = 77
+integral = 77
 
 # Disables or enables the so-called "Monstercat smoothing" with or without "waves". Set to 0 to disable.
 ; monstercat = 0
