--- a/.config/polybar/modules/battery.ini
+++ b/.config/polybar/modules/battery.ini
@@ -1,35 +1,3 @@
-; [module/battery]
-; type = internal/battery
-; battery = BAT1
-; adapter = ACAD
-; full-at = 98
-;
-; format-charging = <label-charging>
-; format-charging-prefix = %{T10}%{T-}
-; format-charging-prefix-background = ${colors.purple}
-; format-charging-prefix-foreground = ${colors.bg}
-; format-charging-prefix-padding = 1
-; label-charging = %{T2}%percentage%%%{T-}
-; label-charging-background = ${colors.bg-alt}
-; label-charging-padding = 1
-;
-; format-discharging = <label-discharging>
-; format-discharging-prefix = %{T10}%{T-}
-; format-discharging-prefix-background = ${colors.purple}
-; format-discharging-prefix-foreground = ${colors.bg}
-; format-discharging-prefix-padding = 1
-; label-discharging = %{T2}%percentage%%%{T-}
-; label-discharging-background = ${colors.bg-alt}
-; label-discharging-padding = 1
-;
-; format-full = <label-full>
-; format-full-prefix = %{T10}%{T-}
-; format-full-prefix-background = ${colors.purple}
-; format-full-prefix-foreground = ${colors.bg}
-; format-full-prefix-padding = 1
-; label-full = %{T2}%percentage%%%{T-}
-; label-full-background = ${colors.bg-alt}
-; label-full-padding = 1
 [module/battery]
 type = internal/battery
 full-at = 99
@@ -40,11 +8,12 @@ poll-interval = 2
 time-format = %H:%M
 
 format-charging-foreground       = ${colors.foreground}
-format-charging-background       = ${colors.bcolor2}
+format-charging-background       = ${colors.bcolor3}
 format-charging-prefix           = 
 format-charging-prefix-foreground = ${colors.color6}
 format-charging-prefix-padding   = 1
 label-charging                   = %percentage%%
+label-charging-foreground = ${colors.foreground}
 label-charging-padding           = 1
 
 format-discharging-foreground     = ${self.format-charging-foreground}
@@ -53,6 +22,7 @@ format-discharging-prefix         = 
 format-discharging-prefix-foreground = ${colors.color6}
 format-discharging-prefix-padding = ${self.format-charging-prefix-padding}
 label-discharging                 = ${self.label-charging}
+label-discharging-foreground = ${colors.foreground}
 label-discharging-padding         = ${self.label-charging-padding}
 
 format-full-foreground     = ${self.format-charging-foreground}
@@ -61,4 +31,5 @@ format-full-prefix         = 
 format-full-prefix-foreground = ${colors.color6}
 format-full-prefix-padding = ${self.format-charging-prefix-padding}
 label-full                 = ${self.label-charging}
+label-full-foreground = ${colors.foreground}
 label-full-padding         = ${self.label-charging-padding}
