--- a/.config/polybar/modules/menu.ini
+++ b/.config/polybar/modules/menu.ini
@@ -5,4 +5,4 @@ content-font = 16
 content-foreground = ${colors.background}
 content-background = ${colors.blue} 
 content-padding = 1.5
-click-left = def-dmenu
+click-left = "~/bin/powermenu"
