--- a/.config/polybar/modules/title.ini
+++ b/.config/polybar/modules/title.ini
@@ -1,6 +1,6 @@
 [module/title]
 type = internal/xwindow
-label = %title:0:15:...%
+label = %{T17}%title:0:15:...%%{T-}
 format-foreground = ${colors.foreground-alt}
 format-padding = 0
 label-foreground = ${colors.foreground}
