--- a/.config/polybar/modules/wlan.ini
+++ b/.config/polybar/modules/wlan.ini
@@ -11,7 +11,7 @@ format-connected-foreground        = ${colors.foreground}
 format-connected-prefix            = 
 format-connected-prefix-foreground = ${colors.color8}
 format-connected-prefix-padding    = 1
-label-connected                    = %essid%
+label-connected                    = %{A1:~/bin/wifimenu:}%essid%%{A}
 label-connected-foreground = ${colors.foreground}
 label-connected-padding            = 1
 
@@ -20,5 +20,7 @@ format-disconnected-foreground     = ${colors.alert}
 format-disconnected-background     = ${self.format-connected-background}
 format-disconnected-prefix         = 
 format-disconnected-prefix-padding = ${self.format-connected-prefix-padding}
-label-disconnected                 = %{T10}%{T-}
+label-disconnected                 = %{A1:~/bin/wifimenu:}%{T10}%{T-}%{A}
 label-disconnected-padding         = ${self.label-connected-padding}
+
+click-left = wifimenu
