--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,7 +24,6 @@ enable-ipc = true
 
 background = ${colors.bg}
 foreground = ${colors.fg}
-; line-size = 4
 border-size = 2
 border-top-size = 2
 border-bottom-size = 2
@@ -32,8 +31,7 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-; modules-left = memory margin cpu margin temperature 
-modules-left = L1 menu R1 sep bspwm sep spacing spacing spacing spacing spacing sep title
+modules-left = L1 menu R1 sep bspwm sep spacing sep title
 modules-center = temperature cpu memory
 modules-right = lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
@@ -41,7 +39,7 @@ tray-background = ${colors.bg}
 tray-position = left
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = 420
+tray-offset-x = 425
 
 cursor-click = pointer
 cursor-scroll = ns-resize
