--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -5,11 +5,11 @@ include-file = $HOME/.config/polybar/include-modules.ini
 include-file = $HOME/.config/polybar/arrows.ini
 
 [bar/main]
-width = 99.2%
-height = 30
+width = 99.55%
+height = 27
 line-size = 2
-offset-x = 0.5%
-offset-y = 0.8%
+offset-x = 0.3%
+; offset-y = 0.%
 top = true
 fixed-center = true
 
