--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,10 +1,10 @@
 [colors]
-bg = #181d26
+bg = #1b1c2b
 bg-alt = #2a2f3b
 fg = #ECEFF4
 fg-alt = #E5E9F0
 
-blue = #7F9DDA
+blue = #7da6ff
 cyan = #88C0D0
 green = #A3BE8C
 orange = #D08770
@@ -19,7 +19,7 @@ white = #FFF
 trans = #00000000
 semi-trans-black = #aa000000
 
-background = #1a1b26
+background = #1b1c2b
 background-alt = #bf616a
 foreground = #a9b1d6
 alert          = #bf616a
@@ -50,7 +50,7 @@ altmagenta = #bb9af7
 altcyan = #0db9d7
 altwhite = #acb0d0
 
-blue1 = #7aa2f7
+blue1 = #7da6ff
 blue2 = #4E83C9
 blue3 = #22639B
 blue4 = #2871cc
