--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -5,6 +5,7 @@ include-file = $HOME/.config/polybar/include-modules.ini
 include-file = $HOME/.config/polybar/arrows.ini
 
 [bar/main]
+monitor = eDP-1-0
 width = 99.55%
 height = 27
 line-size = 2
@@ -31,7 +32,7 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-modules-left = L1 menu R1 sep bspwm sep spacing sep title
+modules-left = L1 menu R1 sep bspwm sep layout sep spacing sep title
 modules-center = temperature cpu memory
 modules-right = lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
@@ -39,7 +40,7 @@ tray-background = ${colors.bg}
 tray-position = left
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = 425
+tray-offset-x = 488
 
 cursor-click = pointer
 cursor-scroll = ns-resize
