--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -24,14 +24,14 @@ format-font = 14
 label-monitor = %icon%
 
 label-focused = %icon%
-label-focused-foreground = ${colors.orange}
+label-focused-foreground = ${colors.altmagenta}
 label-focused-background = ${colors.background}
-label-focused-underline =  ${colors.blue}
+label-focused-underline =  ${colors.altmagenta}
 label-focused-padding-right = 2
 label-focused-padding-left = 1
 
 label-occupied = %icon%
-label-occupied-foreground = ${colors.yellow}
+label-occupied-foreground = ${colors.cyan}
 label-occupied-background = ${colors.background}
 ;label-occupied-underline = 
 label-occupied-padding-right = 2
