--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -176,23 +176,24 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 /* # Sets the radius of rounded window corners. When > 0, the compositor will */
 /* # round the corners of windows. Does not interact well with */
 /* # `transparent-clipping`. */
-/* corner-radius = 10 */
-/**/
-/* # Exclude conditions for rounded corners. */
-/* rounded-corners-exclude = [ */
-/*   "window_type = 'desktop'", */
-/*   "window_type = 'tooltip'", */
-/*   "class_g = 'shutter'", */
-/*   "class_g = 'eww-*'", */
-/*   "class_g = 'activate-linux'", */
-/*   "class_g = 'escrotum'", */
-/*   "class_g = 'Peek'", */
-/*   "class_g = 'firefox'", */
-/*   "_GTK_FRAME_EXTENTS@:c", */
-/*   "class_g = 'Bar'", */
-/*   "class_g = 'eww-background-closer'", */
+corner-radius = 10
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'desktop'",
+  "window_type = 'tooltip'",
+  /* "class_g = 'shutter'", */
+  /* "class_g = 'eww-*'", */
+  /* "class_g = 'activate-linux'", */
+  /* "class_g = 'escrotum'", */
+  /* "class_g = 'Peek'", */
+  /* "class_g = 'firefox'", */
+  "class_g = 'dunst'",
+  "_GTK_FRAME_EXTENTS@:c",
+  /* "class_g = 'Bar'", */
+  /* "class_g = 'eww-background-closer'", */
 /* #  "class_g = 'GLava'", */
-/* ]; */
+];
 
 #################################
 #     Background-Blurring       #
