--- a/.config/polybar/modules/bspwm.ini
+++ b/.config/polybar/modules/bspwm.ini
@@ -31,7 +31,7 @@ label-focused-padding-right = 2
 label-focused-padding-left = 1
 
 label-occupied = %icon%
-label-occupied-foreground = ${colors.cyan}
+label-occupied-foreground = ${colors.blue}
 label-occupied-background = ${colors.background}
 ;label-occupied-underline = 
 label-occupied-padding-right = 2
