--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -13,8 +13,8 @@ offset-x = 0.3%
 ; offset-y = 0.%
 top = true
 fixed-center = true
-
 wm-restack = bspwm
+
 
 override-redirect = false
 
@@ -32,15 +32,15 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-modules-left = L1 menu R1 sep bspwm sep layout sep spacing sep title
+modules-left = L1 menu R1 sep bspwm sep pomo sep title
 modules-center = temperature cpu memory
 modules-right = lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
 tray-background = ${colors.bg}
-tray-position = left
+tray-position = right
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = 488
+tray-offset-x = -560
 
 cursor-click = pointer
 cursor-scroll = ns-resize
