--- a/.config/polybar/modules/title.ini
+++ b/.config/polybar/modules/title.ini
@@ -1,5 +1,8 @@
 [module/title]
-type = internal/xwindow
-label = %{T17}%title:0:14:...%%{T-}
-format-padding = 0
+type = custom/script
+interval = 1
+exec = get-active-window
+label = "%output%" 
+label-minlen = 17
+label-maxlen = 17
 label-foreground = ${colors.foreground}
