--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,15 +32,15 @@ border-left-size = 4
 border-right-size = 4
 include-file = $HOME/.config/polybar/fonts.ini
 
-modules-left = L1 menu R1 sep bspwm sep pomo sep title
-modules-center = temperature cpu memory
+modules-left = L1 menu R1 sep bspwm sep pomo sep title sep temperature cpu memory sep
+modules-center = 
 modules-right = lblue1 spacing1 lblue2 spacing2 lblue3 spacing3 sl1 pulseaudio sl2 battery sl3 eth wlan sl4 date sr4
 
 tray-background = ${colors.bg}
-tray-position = right
+tray-position = left
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = -560
+tray-offset-x = 1126
 
 cursor-click = pointer
 cursor-scroll = ns-resize
