--- a/.config/polybar/modules/title.ini
+++ b/.config/polybar/modules/title.ini
@@ -5,4 +5,5 @@ exec = get-active-window
 label = "%output%" 
 label-minlen = 17
 label-maxlen = 17
+label-font = 17
 label-foreground = ${colors.foreground}
