--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -11,5 +11,5 @@ format-prefix-padding = 1
 label                 = %time%
 label-foreground = ${colors.foreground}
 label-padding         = 1
-time                  = %H:%M
+time                  = %b %d, %H:%M
 time-alt              = %A, %d %B %Y
