--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-theme-name=Catppuccin-purple
+gtk-theme-name=Catppuccin-Mocha
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=FiraCode Nerd Font 11
 gtk-cursor-theme-name=Catppuccin-Mocha-Blue-Cursors
-gtk-cursor-theme-size=32
+gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
