--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,6 +1,6 @@
 [colors]
-bg = #1b1c2b
-bg-alt = #2a2f3b
+bg = #181825
+bg-alt = #1e1e2e
 fg = #ECEFF4
 fg-alt = #E5E9F0
 
@@ -19,7 +19,7 @@ white = #FFF
 trans = #00000000
 semi-trans-black = #aa000000
 
-background = #1b1c2b
+background = #181825
 background-alt = #bf616a
 foreground = #a9b1d6
 alert          = #bf616a
@@ -34,12 +34,12 @@ color7          = #bf616a
 color8          = #bdb2ff
 color9          = #caffbf
 
-bcolor1         = #3d4356 
-bcolor2         = #293540
-bcolor3         = #262a3c 
-bcolor4         = #1c242f 
-bcolor5         = #0c141c
-bcolor6         = #1c242f 
+bcolor1         = #2e2e40 
+bcolor2         = #313244
+bcolor3         = #262633 
+bcolor4         = #1e1e2e 
+bcolor5         = #181825
+bcolor6         = #11111b 
 
 altblack = #444b6a
 altred = #ff7a93
