--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -1,8 +1,9 @@
 [module/temperature]
 type = internal/temperature
+interval = 1
 thermal-zone = 0
 warn-temperature = 70
-
+hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon4/temp1_input
 format = <label>
 format-prefix = %{F#D08770}%{T10}%{T-}
 format-prefix-foreground = ${colors.bg}
