--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -21,7 +21,7 @@ set iterm2_font_height 11
 set unicode_ellipsis false
 set bidi_support false
 set show_hidden_bookmarks true
-set colorscheme default
+set colorscheme dracula
 set preview_files true
 set preview_directories true
 set collapse_preview true
