--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -4,6 +4,7 @@ set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 set show_hidden false
 set confirm_on_delete multiple
 set use_preview_script true
+set preview_script ~/.config/ranger/scope.sh
 set automatically_count_files true
 set open_all_images true
 set vcs_aware false
