--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .config/ranger/colorschemes/__pycache__/
 .config/ranger/colorschemes/__init__.py
+.config/ranger/plugins/__pycache__/
+.config/ranger/plugins/__init__.py
