Massive README.md update

--- a/.config/polybar/arrows.ini
+++ b/.config/polybar/arrows.ini
@@ -23,7 +23,7 @@ content-suffix-margin = 1
 [module/sr4]
 type = custom/text
 content = ${arrow.aright}
-content-foreground  = ${colors.background}
+content-foreground  = ${colors.bcolor5}
 content-background  = ${colors.blue1}
 
 ;; left separators
@@ -53,7 +53,7 @@ content-background  = ${colors.bcolor3}
 [module/sl4]
 type = custom/text
 content = ${arrow.aleft}
-content-foreground  = ${colors.background}
+content-foreground  = ${colors.bcolor5}
 content-background  = ${colors.bcolor4}
 
 [module/lblue1]
