--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,10 +1,10 @@
 [colors]
 bg = #181825
-bg-alt = #1e1e2e
+bg-alt = #1a1b26
 fg = #ECEFF4
 fg-alt = #E5E9F0
 
-blue = #7da6ff
+blue = #7aa2f7
 cyan = #88C0D0
 green = #A3BE8C
 orange = #D08770
@@ -45,12 +45,12 @@ altblack = #444b6a
 altred = #ff7a93
 altgreen = #b9f27c
 altyellow = #ff9e64
-altblue = #7da6ff
+altblue = #7aa2f7
 altmagenta = #bb9af7
 altcyan = #0db9d7
 altwhite = #acb0d0
 
-blue1 = #7da6ff
+blue1 = #7aa2f7
 blue2 = #4E83C9
 blue3 = #22639B
 blue4 = #2871cc
