--- a/.config/polybar/modules/date.ini
+++ b/.config/polybar/modules/date.ini
@@ -4,7 +4,7 @@ interval = 1
 
 format                = <label>
 format-foreground     = ${colors.foreground}
-format-background     = ${colors.background}
+format-background     = ${colors.bg-alt}
 format-prefix         =  
 format-prefix-foreground = ${colors.magenta}
 format-prefix-padding = 1
