--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -22,7 +22,7 @@ set iterm2_font_height 11
 set unicode_ellipsis false
 set bidi_support false
 set show_hidden_bookmarks true
-set colorscheme dracula
+set colorscheme default
 set preview_files true
 set preview_directories true
 set collapse_preview true
