Fix polybar looks ugly after update

--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -1,24 +1,7 @@
-; [module/cpu]
-; type = internal/cpu
-; interval = 1
-;
-; format = <label>
-; format-prefix = %{T10}%{T-}
-; format-prefix-background = ${colors.purple}
-; format-prefix-foreground = ${colors.bg}
-; format-prefix-padding = 1
-; label = %{T2}%percentage:2%%%{T-}
-; label-background = ${colors.bg-alt}
-; label-foreground = ${colors.fg}
-; label-padding = 1
-
 [module/cpu]
 type = internal/cpu
 interval = 2
 
-format-prefix            = 
-format-padding    = 3
-format-prefix-foreground = ${colors.color2}
-label                    = %percentage:2%%
-label-foreground = ${colors.foreground}
-label-padding            = 1
+format-prefix            = " "
+format-padding    = 2
+label                    = "%{F#EBCB8B} %{F-}%{F#a9b1d6}%percentage:2%%%{F-}"
