--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -1,23 +1,9 @@
-; [module/memory]
-; type = internal/memory
-; interval = 1
-;
-; format = <label>
-; format-prefix = %{T10}%{T-}
-; format-prefix-background = ${colors.blue}
-; format-prefix-foreground = ${colors.bg}
-; format-prefix-padding = 1
-; label = %{T2}%percentage_used%%%{T-}
-; label-background = ${colors.bg-alt}
-; label-foreground = ${colors.fg}
-; label-padding = 1
 [module/memory]
 type = internal/memory
 interval = 2
 
-format-prefix            = 
 format-padding = 0
 format-prefix-foreground = ${colors.color3}
-label                    = %mb_used%
+label                    = " %{F#7aa2f7}%{O13}%{F-}%{F#a9b1d6}%mb_used%%{F-}"
 label-foreground = ${colors.foreground}
-label-padding            = 1
+label-padding            = 0
