--- a/.config/polybar/modules/menu.ini
+++ b/.config/polybar/modules/menu.ini
@@ -1,8 +1,8 @@
 [module/menu]
 type = custom/text
-content = %{O5} %{O1}  
+content =    
 content-font = 16
 content-foreground = ${colors.background}
 content-background = ${colors.blue} 
-content-padding = 1.5
+content-padding = 1
 click-left = "~/bin/powermenu"
