--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -2,22 +2,23 @@
 type = internal/temperature
 interval = 1
 thermal-zone = 0
-warn-temperature = 70
+warn-temperature = 75
 hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon4/temp1_input
 format = <label>
 format-prefix = %{F#D08770}%{T10}%{T-}
 format-prefix-foreground = ${colors.bg}
-format-prefix-padding = 1
+format-prefix-padding = 0.8
 format-padding = 0
 
 format-warn = <label-warn>
-format-warn-prefix = %{F#BF616A}%{T10}%{T-}
+format-warn-prefix = %{F#ff7a93}%{T10}%{T-}
 format-warn-prefix-foreground = ${colors.bg}
-format-warn-prefix-padding = 1
+format-warn-prefix-padding = 0.8
 format-warn-padding = 0
 
-label = %{T2}%temperature-c%%{T-}
+label = "%{T2} %temperature-c%%{T-}"
 label-foreground = ${colors.foreground}
 
-label-warn = %{T2}%temperature-c%%{T-}
+label-warn = "%{T2} %temperature-c%%{T-}"
 label-warn-foreground = ${colors.foreground}
+label-prefix-padding = 1
