--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -24,7 +24,7 @@ ramp-volume-2 = 
 ramp-volume-3 = 
 ramp-volume-4 = 
 ramp-volume-padding = 1
-ramp-volume-foreground = ${colors.color5}
+ramp-volume-foreground = ${colors.blue}
 
 ramp-headphones-0 = 
 ramp-headphones-1 = 
