Fix Iosevka Nerd Font update fucked up polybar again

--- a/.config/polybar/arrows.ini
+++ b/.config/polybar/arrows.ini
@@ -18,7 +18,6 @@ aright = "%{T13} %{T-}%{O-10}"
 type = custom/text
 content = ${arrow.aright}
 content-foreground  = ${colors.blue}
-content-suffix-margin = 1
 
 [module/sr4]
 type = custom/text
@@ -72,6 +71,11 @@ type = custom/text
 content = ${arrow.aleft}
 content-foreground  = ${colors.blue3}
 content-background  = ${colors.blue2}
+
+[module/spacing0]
+type = custom/text
+content = " "
+content-background  = ${colors.background}
 
 [module/spacing1]
 type = custom/text
