--- a/.config/polybar/modules/menu.ini
+++ b/.config/polybar/modules/menu.ini
@@ -1,8 +1,8 @@
 [module/menu]
 type = custom/text
-content =    
-content-font = 16
+content = %{O1} %{O-1}   
+content-font = 15
 content-foreground = ${colors.background}
 content-background = ${colors.blue} 
-content-padding = 1
+content-padding = 6px
 click-left = "~/bin/powermenu"
