--- a/.config/polybar/modules/menu.ini
+++ b/.config/polybar/modules/menu.ini
@@ -5,4 +5,4 @@ content-font = 15
 content-foreground = ${colors.background}
 content-background = ${colors.blue} 
 content-padding = 6px
-click-left = "~/bin/powermenu"
+click-left = "bspc wm -r"
