--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -256,7 +256,7 @@ map pd console paste dest=
 map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
-map dD console delete
+map dD shell trash-put %s
 map dT console trash
 
 map dd cut
