--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,9 +19,10 @@ cursor_blink_interval 1
 cursor_stop_blinking_after 15.0
 
 # Scrollback
-scrollback_lines 10000
+scrollback_lines 100000
 wheel_scroll_multiplier 5.0
-
+# https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
+scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'set termguicolors laststatus=0' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
 # URLs
 url_style double
 open_url_modifiers ctrl+shift
