--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -25,6 +25,20 @@ matches:
     replace: "🟣"
   - trigger: ";schedule"
     replace: "⏳ "
+  - trigger: ";book"
+    replace: "📚"
+  - trigger: ";post"
+    replace: "📝"
+  - trigger: ";paper"
+    replace: "📜"
+  - trigger: ";course"
+    replace: "🏫"
+  - trigger: ";video"
+    replace: "📽"
+  - trigger: ";podcast"
+    replace: "🎧"
+  - trigger: ";article"
+    replace: "🗞️"
   - trigger: ";seed"
     replace: "🌱"
   - trigger: ";branch"
