--- a/.config/polybar/arrows.ini
+++ b/.config/polybar/arrows.ini
@@ -11,8 +11,8 @@
 
 
 [arrow]
-aleft  = "%{T13}%{T-}"
-aright = "%{T13} %{T-}%{O-10}"
+aleft  = "%{T13}%{T-}%{O-1}"
+aright = "%{O-1}%{T13} %{T-}%{O-11}"
 
 [module/R1]
 type = custom/text
