README.md update (firefox + osidian) and partially migrate to NvChad v2.0

--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -39,6 +39,18 @@ matches:
     replace: "🎧"
   - trigger: ";article"
     replace: "🗞️"
+  - trigger: ";bmark"
+    replace: "🔖"
+  - trigger: ";inbox"
+    replace: "📫"
+  - trigger: ";task"
+    replace: "⛳"
+  - trigger: ";project"
+    replace: "🎯"
+  - trigger: ";ref"
+    replace: "🗃️"
+  - trigger: ";question"
+    replace: "❓"
   - trigger: ";seed"
     replace: "🌱"
   - trigger: ";branch"
