Update kitty configs + neovim wrapper as default app

--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -51,6 +51,8 @@ matches:
     replace: "🗃️"
   - trigger: ";question"
     replace: "❓"
+  - trigger: ";bell"
+    replace: "🛎️"
   - trigger: ";seed"
     replace: "🌱"
   - trigger: ";branch"
