--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -13,22 +13,24 @@ matches:
     replace: "Hi there!"
 
   # NOTE: espanso uses YAML to define matches, so pay attention to the indentation!
+  - trigger: ";purple"
+    replace: "🟣"
   - trigger: ";green"
     replace: "🟢"
+  - trigger: ";orange"
+    replace: "🟠"
   - trigger: ";yellow"
     replace: "🟡"
   - trigger: ";white"
     replace: "⚪"
+  - trigger: ";black"
+    replace: "⚫"
   - trigger: ";red"
     replace: "🔴"
-  - trigger: ";purple"
-    replace: "🟣"
   - trigger: ";schedule"
     replace: "⏳ "
   - trigger: ";book"
     replace: "📚"
-  - trigger: ";post"
-    replace: "📝"
   - trigger: ";paper"
     replace: "📜"
   - trigger: ";course"
@@ -39,6 +41,8 @@ matches:
     replace: "🎧"
   - trigger: ";article"
     replace: "🗞️"
+  - trigger: ";bird"
+    replace: "🐦"
   - trigger: ";bmark"
     replace: "🔖"
   - trigger: ";inbox"
@@ -53,12 +57,8 @@ matches:
     replace: "❓"
   - trigger: ";bell"
     replace: "🛎️"
-  - trigger: ";seed"
-    replace: "🌱"
-  - trigger: ";branch"
-    replace: "🌿"
-  - trigger: ";tree"
-    replace: "🌳"
+  - trigger: ";note"
+    replace: "📝"
   - trigger: ";moc"
     replace: "🗺️"
   - trigger: ";low"
