weekly update + better kitty padding for neovim

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,6 +8,8 @@ bold_font        auto
 bold_italic_font auto
 font_size        12
 editor nvim
+allow_remote_control yes
+listen_on unix:@mykitty
 
 adjust_line_height 0
 adjust_column_width 0
