--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ bold_font        auto
 bold_italic_font auto
 font_size        12
 editor nvim
-allow_remote_control yes
+allow_remote_control socket-only
 listen_on unix:@mykitty
 
 adjust_line_height 0
