--- a/.config/polybar/arrows.ini
+++ b/.config/polybar/arrows.ini
@@ -99,7 +99,7 @@ content-background = ${colors.background}
 
 [module/sep]
 type = custom/text
-content = ""
+content = "󰇙"
 
 content-font = 15
 content-background = ${colors.background}
