--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -523,3 +523,6 @@ default_linemode devicons
 default_linemode devicons
 
 default_linemode devicons
+
+# Custom mappings
+map xc shell xclip -selection clipboard -t image/png -i %f
